--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "@material-ui/core": "^3.9.2",
     "nuka-carousel": "^4.5.3",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "react-dom": "^16.8.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -23,5 +22,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "react-scripts": "^2.1.8"
+  }
 }
